Clean up subdirs. Clean up timeline imgs. Add algo.

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
   <script src="https://use.fontawesome.com/c91c862a08.js"></script>
   <!-- Analytics -->
   <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-  ga('create', 'UA-52348587-1', 'auto');
-  ga('send', 'pageview');
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-52348587-1', 'auto');
+    ga('send', 'pageview');
   </script>
 </head>
 
@@ -52,15 +52,22 @@
 
       <!-- About -->
       <div id="about-div" class="tab">
-        <p>Hey! I'm Raymond Xu, a junior studying Computer Science at Columbia University. I love building apps, thinking about pedagogy, and practicing sleight of hand. At school, I help run <a href="http://www.adicu.com" class="colored-link" target="_blank">ADI</a> and <a href="http://www.devfe.st" class="colored-link" target="_blank">DevFest</a>. I also write on <a href="https://www.medium.com/@raymondxu" class="colored-link" target="_blank">Medium</a>.</p>
+        <p>Hey! I'm Raymond Xu, a junior studying Computer Science at Columbia University. I love building apps, thinking about pedagogy, and optimizing life. At school, I help run <a href="http://www.adicu.com" class="colored-link" target="_blank">ADI</a> and <a href="http://www.devfe.st" class="colored-link" target="_blank">DevFest</a>. I also write on <a href="https://www.medium.com/@raymondxu" class="colored-link" target="_blank">Medium</a>.</p>
         <div class="divide"><hr></div>
         <div class="container">
           <div class="event">
             <div class="event-image-container">
-              <a href="http://www.cs.columbia.edu" target="_blank"><img class="event-image" alt="columbia" src="img/columbia.jpg"></a>
+              <a href="http://www.cs.columbia.edu" target="_blank"><img class="event-image" alt="columbia" src="img/seas.png"></a>
             </div>
             <div class="event-description"><p>B.S. Computer Science</p><p>2014 - 2018</p>
             </div>
+          </div>
+          <div class="event">
+              <div class="event-image-container">
+                <a href="https://csorw4231-14.wikischolars.columbia.edu/" target="_blank"><img class="event-image" alt="algorithms" src="img/algo.png"></a>
+              </div>
+              <div class="event-description"><p>Teaching Assistant</p><p>Spring 2017</p>
+              </div>
           </div>
           <div class="event">
               <div class="event-image-container">
@@ -85,7 +92,7 @@
           </div>
           <div class="event">
             <div class="event-image-container">
-              <a href="http://devfe.st" target="_blank"><img class="event-image" alt="devfest" src="img/devfest.jpg"></a>
+              <a href="http://devfe.st" target="_blank"><img class="event-image" alt="devfest" src="img/devfest.png"></a>
             </div>
             <div class="event-description"><p>Lead Director</p><p>2015 - Present</p>
             </div>
@@ -154,7 +161,7 @@
   </div>
 </body>
 
-  <!-- JavaScript -->
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
-  <script src="js/core.js"></script>
+<!-- JavaScript -->
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
+<script src="js/core.js"></script>
 </html>
