Revamp project and talk design

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 
     <!-- Navigation -->
     <div class="nav-container">
-      <span id="about" class="nav"><h2>ABOUT</h2></span>
-      <span id="projects" class="nav"><h2>PROJECTS</h2></span>
-      <span id="talks" class="nav"><h2>TALKS</h2></span>
-      <span id="contact" class="nav"><h2>CONTACT</h2></span>
+      <span class="nav"><a href="/about"><h2>ABOUT</h2></a></span>
+      <span class="nav"><a href="/projects"><h2>PROJECTS</h2></a></span>
+      <span class="nav"><a href="/talks"><h2>TALKS</h2></a></span>
+      <span class="nav"><a href="/contact"><h2>CONTACT</h2></a></span>
     </div>
 
     <!-- Content Pane -->
@@ -120,14 +120,13 @@
 
       <!--- Talks -->
       <div id="talks-div" class="tab">
-        <p>I enjoy teaching. Here are some technical talks and workshops that I've developed.<br><br><br>
         <div class="talk-container">
           <a href="http://www.raymondxu.io/wgc.pdf" class="colored-link" target="_blank">Writing Good Code</a>
           <div class="talk-description">This talk teaches principles of effective software development that aren't emphasized in college coursework. In it, I explain why code style, design patterns, and testing are important for writing maintainable code, and introduce relevant tools such as linters and testing frameworks.</div>
         </div>
         <div class="talk-container">
           <a href="http://www.raymondxu.io/algorithms.pdf" class="colored-link" target="_blank">Algorithms for Interviews</a>
-          <div class="talk-description">The sequel to <a href="http://www.raymondxu.io/datastructures.pdf" class="underlined-link" target="_blank">Data Structures for Interviews</a>, this talk explores sorting, recursion, greedy algorithms, and dynamic programming.</div>
+          <div class="talk-description"></div>
         </div>
         <div class="talk-container">
           <a href="http://www.raymondxu.io/hackcon16.pdf" class="colored-link" target="_blank">5 Steps for Effective Education at Hackathons</a>
