Fix relative links

--- a/projects.html
+++ b/projects.html
@@ -39,10 +39,10 @@
 
     <!-- Navigation -->
     <div class="nav-container">
-      <span class="nav"><a href="/about"><h2>ABOUT</h2></a></span>
-      <span class="nav nav-selected"><a href="/projects"><h2>PROJECTS</h2></a></span>
-      <span class="nav"><a href="/talks"><h2>TALKS</h2></a></span>
-      <span class="nav"><a href="/contact"><h2>CONTACT</h2></a></span>
+      <span class="nav"><a href="about.html"><h2>ABOUT</h2></a></span>
+      <span class="nav nav-selected"><a href="projects.html"><h2>PROJECTS</h2></a></span>
+      <span class="nav"><a href="talks.html"><h2>TALKS</h2></a></span>
+      <span class="nav"><a href="contact.html"><h2>CONTACT</h2></a></span>
     </div>
 
     <!--- Talks -->
