Fill in remaining pages

--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,8 @@
   <!-- Stylesheets -->
   <link href="css/base.css" rel="stylesheet" type="text/css">
   <link href="css/timeline.css" rel="stylesheet" type="text/css">
+  <link href="css/talks.css" rel="stylesheet" type="text/css">
+
   <!-- Fonts -->
   <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
@@ -40,14 +42,19 @@
       <span class="nav"><a href="about.html"><h2>ABOUT</h2></a></span>
       <span class="nav"><a href="projects.html"><h2>PROJECTS</h2></a></span>
       <span class="nav"><a href="talks.html"><h2>TALKS</h2></a></span>
-      <span class="nav"><a href="contact.html"><h2>CONTACT</h2></a></span>
+      <span class="nav nav-selected"><a href="contact.html"><h2>CONTACT</h2></a></span>
     </div>
 
     <div class="tab-container">
-      <!-- Cube^3 animation -->
-      <div class="cube1 behind"> </div>
-      <div class="cube2 behind"> </div>
-      <div class="cube3 behind"> </div>
+      <!-- Contact -->
+      <div id="contact-div" class="tab">
+        <div class="contact">
+          <a href="mailto:mail@raymondxu.io?Subject=Hello!" target="_top"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a>
+          <a href="https://www.medium.com/@raymondxu" target="_blank"><i class="fa fa-medium fa-2x" aria-hidden="true"></i></a>
+          <a href="https://www.facebook.com/RayXu" target="_blank"><i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i></a>
+          <a href="https://www.linkedin.com/pub/raymond-xu/65/303/b58" target="_blank"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
+        </div>
+      </div>
     </div>
   </div>
 </body>
