No SSL on Density

--- a/projects.html
+++ b/projects.html
@@ -70,7 +70,7 @@
 
         <div class="talk-container">
           <div class="talk-image-container">
-            <a href="https://density.adicu.com"><img src="img/density.png" class="talk-image"></a>
+            <a href="http://density.adicu.com"><img src="img/density.png" class="talk-image"></a>
           </div>
           <div class="talk-details-container">
             <div class="talk-title">Density</div>
