Make project titles links too

--- a/projects.html
+++ b/projects.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+f<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -53,7 +53,7 @@
             <a href="http://pokerchips.io"><img src="img/pokerchips.png" class="talk-image"></a>
           </div>
           <div class="talk-details-container">
-            <div class="talk-title">pokerchips.io</div>
+            <div class="talk-title"><a href="http://pokerchips.io" class="colored-link">pokerchips.io</a></div>
             <div class="talk-desc">pokerchips.io transforms your phone into a virtual poker chip remote when you don't have physical chips, but still want to play poker.</div>
           </div>
         </div>
@@ -63,7 +63,7 @@
             <a href="https://github.com/RaymondXu/hubot-ping"><img src="img/hubot-ping.png" class="talk-image"></a>
           </div>
           <div class="talk-details-container">
-            <div class="talk-title">hubot-ping</div>
+            <div class="talk-title"><a href="https://github.com/RaymondXu/hubot-ping" class="colored-link">hubot-ping</a></div>
             <div class="talk-desc">A bot that tracks your outgoing pings on Slack, making sure you never forget any of your requests.</div>
           </div>
         </div>
@@ -73,7 +73,7 @@
             <a href="http://density.adicu.com"><img src="img/density.png" class="talk-image"></a>
           </div>
           <div class="talk-details-container">
-            <div class="talk-title">Density</div>
+            <div class="talk-title"><a href="http://density.adicu.com" class="colored-link">Density</a></div>
             <div class="talk-desc">Density is a Flask app that estimates how full study spaces around campus are using Wi-Fi data.</div>
           </div>
         </div>
