--- a/talks.html
+++ b/talks.html
@@ -53,7 +53,7 @@
             <a href="http://raymondxu.io/wgc.pdf"><img src="img/wgc.png" class="talk-image"></a>
           </div>
           <div class="talk-details-container">
-            <div class="talk-title">Writing Good Code</div>
+            <div class="talk-title"><a href="http://raymondxu.io/wgc.pdf" class="colored-link">Writing Good Code</a></div>
             <div class="talk-desc">This talk teaches principles of effective software development that aren't emphasized in college coursework. In it, I explain why code style, design patterns, and testing are important for writing maintainable code, and introduce relevant tools such as linters and testing frameworks.</div>
           </div>
         </div>
@@ -63,7 +63,7 @@
             <a href="http://raymondxu.io/algorithms.pdf"><img src="img/afi.png" class="talk-image"></a>
           </div>
           <div class="talk-details-container">
-            <div class="talk-title">Algorithms for Interviews</div>
+            <div class="talk-title"><a href="http://raymondxu.io/algorithms.pdf" class="colored-link">Algorithms for Interviews</a></div>
             <div class="talk-desc">The sequel to <a href="http://www.raymondxu.io/datastructures.pdf" class="underlined-link" target="_blank">Data Structures for Interviews</a>, this talk explores sorting, recursion, greedy algorithms, and dynamic programming.</div>
           </div>
         </div>
@@ -73,7 +73,7 @@
             <a href="http://raymondxu.io/hackcon16.pdf"><img src="img/hackcon.png" class="talk-image"></a>
           </div>
           <div class="talk-details-container">
-            <div class="talk-title">5 Steps for Effective Education at Hackathons</div>
+            <div class="talk-title"><a href="http://raymondxu.io/hackcon16.pdf" class="colored-link">5 Steps for Effective Education at Hackathons</a></div>
             <div class="talk-desc">I gave this workshop at <a href="http://www.hackcon.io/na" class="underlined-link" target="_blank">HackCon IV</a> to an audience of 70 hackathon organizers from around the nation. It details a methodology for constructing effective educational models for hackathons and explains the importance of thoughtful iteration.</div>
           </div>
         </div>
@@ -83,7 +83,7 @@
             <a href="http://raymondxu.io/datastructures.pdf"><img src="img/dsfi.png" class="talk-image"></a>
           </div>
           <div class="talk-details-container">
-            <div class="talk-title">Data Structures for Interviews</div>
+            <div class="talk-title"><a href="http://raymondxu.io/datastructures.pdf" class="colored-link">Data Structures for Interviews</a></div>
             <div class="talk-desc">I give this talk at Columbia every fall during interview season. It miraculously packs a semester's worth of content from a data structures class into one hour.</div>
           </div>
         </div>
@@ -94,7 +94,7 @@
             <a href="https://learn.devfe.st/webdev"><img src="img/webdev.png" class="talk-image"></a>
           </div>
           <div class="talk-details-container">
-            <div class="talk-title">Web Development with Flask</div>
+            <div class="talk-title"><a href="https://learn.devfe.st/webdev" class="colored-link">Web Development with Flask</a></div>
             <div class="talk-desc">I co-authored this original curriculum for <a href="http://devfe.st" class="underlined-link" target="_blank">DevFest 2016</a>, <a href="http://adicu.com" class="underlined-link" target="_blank">ADI</a>'s week-long workshop series and hackathon. This comprehensive tutorial teaches web development by guiding students through the process of building a reading list app using Flask and Mongo. Read more about the DevFest Track System and its educational methodology <a href="https://medium.com/stories-from-adi/rethinking-education-at-devfest-d5fac7c303be" class="underlined-link" target="_blank">here</a></div>
           </div>
         </div>
@@ -104,7 +104,7 @@
             <a href="https://www.github.com/raymondxu/javaworkshop"><img src="img/java.png" class="talk-image"></a>
           </div>
           <div class="talk-details-container">
-            <div class="talk-title">Intermediate Java</div>
+            <div class="talk-title"><a href="https://www.github.com/raymondxu/javaworkshop" class="colored-link">Intermediate Java</a></div>
             <div class="talk-desc">This workshop functions as a supplement to a typical introductory computer science course. It covers Java variable concepts, abstraction, and concludes with a splash of design patterns.</div>
           </div>
         </div>
