--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <a href="http://pokerchips.io"><img src="img/pokerchips.png" class="card-image"></a>
           </div>
           <div class="card-details-container">
-            <div class="card-title"><a href="http://pokerchips.io" class="colored-link">pokerchips.io</a></div>
+            <div class="card-title"><a href="http://pokerchips.io" class="link">pokerchips.io</a></div>
             <div class="card-desc">pokerchips.io transforms your phone into a virtual poker chip remote when you don't have physical chips, but still want to play poker.</div>
           </div>
         </div>
@@ -125,7 +125,7 @@
             <a href="https://github.com/RaymondXu/hubot-ping"><img src="img/hubot-ping.png" class="card-image"></a>
           </div>
           <div class="card-details-container">
-            <div class="card-title"><a href="https://github.com/RaymondXu/hubot-ping" class="colored-link">hubot-ping</a></div>
+            <div class="card-title"><a href="https://github.com/RaymondXu/hubot-ping" class="link">hubot-ping</a></div>
             <div class="card-desc">A bot that tracks your outgoing pings on Slack, making sure you never forget any of your requests.</div>
           </div>
         </div>
@@ -135,7 +135,7 @@
             <a href="http://density.adicu.com"><img src="img/density.png" class="card-image"></a>
           </div>
           <div class="card-details-container">
-            <div class="card-title"><a href="http://density.adicu.com" class="colored-link">Density</a></div>
+            <div class="card-title"><a href="http://density.adicu.com" class="link">Density</a></div>
             <div class="card-desc">Density is a Flask app that estimates how full study spaces around campus are using Wi-Fi data.</div>
           </div>
         </div>
@@ -148,7 +148,7 @@
             <a href="http://raymondxu.io/wgc.pdf"><img src="img/wgc.png" class="card-image"></a>
           </div>
           <div class="card-details-container">
-            <div class="card-title"><a href="http://raymondxu.io/wgc.pdf" class="colored-link">Writing Good Code</a></div>
+            <div class="card-title"><a href="http://raymondxu.io/wgc.pdf" class="link">Writing Good Code</a></div>
             <div class="card-desc">This talk teaches principles of effective software development that aren't emphasized in college coursework. In it, I explain why code style, design patterns, and testing are important for writing maintainable code, and introduce relevant tools such as linters and testing frameworks.</div>
           </div>
         </div>
@@ -158,7 +158,7 @@
             <a href="http://raymondxu.io/algorithms.pdf"><img src="img/afi.png" class="card-image"></a>
           </div>
           <div class="card-details-container">
-            <div class="card-title"><a href="http://raymondxu.io/algorithms.pdf" class="colored-link">Algorithms for Interviews</a></div>
+            <div class="card-title"><a href="http://raymondxu.io/algorithms.pdf" class="link">Algorithms for Interviews</a></div>
             <div class="card-desc">The sequel to <a href="http://www.raymondxu.io/datastructures.pdf" class="underlined-link" target="_blank">Data Structures for Interviews</a>, this talk explores sorting, recursion, greedy algorithms, and dynamic programming.</div>
           </div>
         </div>
@@ -168,7 +168,7 @@
             <a href="http://raymondxu.io/hackcon16.pdf"><img src="img/hackcon.png" class="card-image"></a>
           </div>
           <div class="card-details-container">
-            <div class="card-title"><a href="http://raymondxu.io/hackcon16.pdf" class="colored-link">5 Steps for Effective Education at Hackathons</a></div>
+            <div class="card-title"><a href="http://raymondxu.io/hackcon16.pdf" class="link">5 Steps for Effective Education at Hackathons</a></div>
             <div class="card-desc">I gave this workshop at <a href="http://www.hackcon.io/na" class="underlined-link" target="_blank">HackCon IV</a> to an audience of 70 hackathon organizers from around the nation. It details a methodology for constructing effective educational models for hackathons and explains the importance of thoughtful iteration.</div>
           </div>
         </div>
@@ -178,7 +178,7 @@
             <a href="http://raymondxu.io/datastructures.pdf"><img src="img/dsfi.png" class="card-image"></a>
           </div>
           <div class="card-details-container">
-            <div class="card-title"><a href="http://raymondxu.io/datastructures.pdf" class="colored-link">Data Structures for Interviews</a></div>
+            <div class="card-title"><a href="http://raymondxu.io/datastructures.pdf" class="link">Data Structures for Interviews</a></div>
             <div class="card-desc">I give this talk at Columbia every fall during interview season. It miraculously packs a semester's worth of content from a data structures class into one hour.</div>
           </div>
         </div>
@@ -188,7 +188,7 @@
             <a href="https://learn.devfe.st/webdev"><img src="img/webdev.png" class="card-image"></a>
           </div>
           <div class="card-details-container">
-            <div class="card-title"><a href="https://learn.devfe.st/webdev" class="colored-link">Web Development with Flask</a></div>
+            <div class="card-title"><a href="https://learn.devfe.st/webdev" class="link">Web Development with Flask</a></div>
             <div class="card-desc">I co-authored this original curriculum for <a href="http://devfe.st" class="underlined-link" target="_blank">DevFest 2016</a>, <a href="http://adicu.com" class="underlined-link" target="_blank">ADI</a>'s week-long workshop series and hackathon. This comprehensive tutorial teaches web development by guiding students through the process of building a reading list app using Flask and Mongo. Read more about the DevFest Track System and its educational methodology <a href="https://medium.com/stories-from-adi/rethinking-education-at-devfest-d5fac7c303be" class="underlined-link" target="_blank">here</a></div>
           </div>
         </div>
@@ -198,7 +198,7 @@
             <a href="https://www.github.com/raymondxu/javaworkshop"><img src="img/java.png" class="card-image"></a>
           </div>
           <div class="card-details-container">
-            <div class="card-title"><a href="https://www.github.com/raymondxu/javaworkshop" class="colored-link">Intermediate Java</a></div>
+            <div class="card-title"><a href="https://www.github.com/raymondxu/javaworkshop" class="link">Intermediate Java</a></div>
             <div class="card-desc">This workshop functions as a supplement to a typical introductory computer science course. It covers Java variable concepts, abstraction, and concludes with a splash of design patterns.</div>
           </div>
         </div>
