Add FB meta info

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
   <meta name="robots" content="NOODP, index, follow" />
   <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+  <meta name="twitter:card" content="summary">
+  <meta property="og:url" content="http://raymondxu.io" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Raymond Xu" />
+  <meta property="og:description" content="Raymond Xu is a Computer Science student at Columbia University with a strong interest in software engineering and product development" />
+  <meta property="og:image" content="img/landing.png" />
   <title>Raymond Xu</title>
   <!-- Stylesheets -->
   <link href="css/base.css" rel="stylesheet" type="text/css">
@@ -136,7 +142,7 @@
           </div>
           <div class="card-details-container">
             <div class="card-title"><a href="http://density.adicu.com" class="link">Density</a></div>
-            <div class="card-desc">Density is a Flask app that estimates how full study spaces around campus are using Wi-Fi data.</div>
+            <div class="card-desc">Density is a Flask app that estimates how full study spaces around campus are using Wi-Fi data. Developed with a team in <a href="https://adicu.com/labs" class="underlined-link" target="_blank">ADI Labs</a>.</div>
           </div>
         </div>
       </div>
@@ -189,7 +195,7 @@
           </div>
           <div class="card-details-container">
             <div class="card-title"><a href="https://learn.devfe.st/webdev" class="link">Web Development with Flask</a></div>
-            <div class="card-desc">I co-authored this original curriculum for <a href="http://devfe.st" class="underlined-link" target="_blank">DevFest 2016</a>, <a href="http://adicu.com" class="underlined-link" target="_blank">ADI</a>'s week-long workshop series and hackathon. This comprehensive tutorial teaches web development by guiding students through the process of building a reading list app using Flask and Mongo. Read more about the DevFest Track System and its educational methodology <a href="https://medium.com/stories-from-adi/rethinking-education-at-devfest-d5fac7c303be" class="underlined-link" target="_blank">here</a></div>
+            <div class="card-desc">I co-authored this original curriculum for <a href="http://devfe.st" class="underlined-link" target="_blank">DevFest</a>, <a href="http://adicu.com" class="underlined-link" target="_blank">ADI</a>'s week-long workshop series and hackathon. This comprehensive tutorial teaches web development by guiding students through the process of building a reading list app using Flask. Read more about the DevFest Track System and its educational methodology <a href="https://medium.com/stories-from-adi/rethinking-education-at-devfest-d5fac7c303be" class="underlined-link" target="_blank">here</a></div>
           </div>
         </div>
       
