--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Raymond Xu" />
   <meta property="og:description" content="Raymond Xu is a Computer Science student at Columbia University with a strong interest in software engineering and product development" />
-  <meta property="og:image" content="img/landing.png" />
+  <meta property="og:image" content="http://raymondxu.io/img/landing.png" />
   <title>Raymond Xu</title>
   <!-- Stylesheets -->
   <link href="css/base.css" rel="stylesheet" type="text/css">
