--- a/index.html
+++ b/index.html
@@ -151,6 +151,16 @@
       <div id="talks-div" class="iter">
         <div class="card">
           <div class="card-image-container">
+            <a href="http://raymondxu.io/dp.pdf"><img src="img/dp.png" class="card-image"></a>
+          </div>
+          <div class="card-details-container">
+            <div class="card-title"><a href="http://raymondxu.io/dp.pdf" class="link">Dynamic Programming</a></div>
+            <div class="card-desc">As a TA for <a href="https://csorw4231-14.wikischolars.columbia.edu/" class="underlined-link" target="_blank"> Analysis of Algorithms I</a>, I gave this review lecture on dynamic programming to help prepare students for the midterm exam.</div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-image-container">
             <a href="http://raymondxu.io/wgc.pdf"><img src="img/wgc.png" class="card-image"></a>
           </div>
           <div class="card-details-container">
