--- a/index.html
+++ b/index.html
@@ -128,6 +128,16 @@
 
         <div class="card">
           <div class="card-image-container">
+            <a href="http://raymondxu.io/pseudo.pdf"><img src="img/pseudo.png" class="card-image"></a>
+          </div>
+          <div class="card-details-container">
+            <div class="card-title"><a href="http://raymondxu.io/pseudo.pdf" class="link">Pseudo</a></div>
+            <div class="card-desc">An algorithm design language with Pythonic syntax and a novel object inference algorithm. Written in OCaml and compiles programs to LLVM.</div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-image-container">
             <a href="https://github.com/RaymondXu/hubot-ping"><img src="img/hubot-ping.png" class="card-image"></a>
           </div>
           <div class="card-details-container">
@@ -185,7 +195,7 @@
           </div>
           <div class="card-details-container">
             <div class="card-title"><a href="http://raymondxu.io/hackcon16.pdf" class="link">5 Steps for Effective Education at Hackathons</a></div>
-            <div class="card-desc">I gave this workshop at <a href="http://www.hackcon.io/na" class="underlined-link" target="_blank">HackCon IV</a> to an audience of 70 hackathon organizers from around the nation. It details a methodology for constructing effective educational models for hackathons and explains the importance of thoughtful iteration.</div>
+            <div class="card-desc">I gave this workshop at <a href="http://www.hackcon.io" class="underlined-link" target="_blank">HackCon IV</a> to an audience of 70 hackathon organizers from around the nation. It details a methodology for constructing effective educational models for hackathons and explains the importance of thoughtful iteration.</div>
           </div>
         </div>
 
